# text-to-plot

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  evaluation.yml
data/test/: test-code.json  test-golden.json  test.json
data/train/: train-code.json  train-golden.json  train.json
src/: _prep.py  evaluate.py  prep.py  util.py
test/: test_evaluate.py
